--- a/templates/forum.html
+++ b/templates/forum.html
@@ -1,6 +1,6 @@
 {% include "layouts/navbar.html" %}
 <title>Forum</title>
-<body style="font-family: Baskerville" </body>
+<body style="font-family: Baskerville"></body>
 
 
 <body style="background-color: #EBF7FA;">
@@ -59,6 +59,7 @@
 
     </p>
 
-    <body>
+</div>
+</body>
 
 </html>
