--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -88,17 +88,20 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="dropdown-item" href="{{ url_for('sonakshi') }}">Sonakshi</a>
                     <a class="dropdown-item" href="{{ url_for('linda') }}">Punnu</a>
                     <a class="dropdown-item" href="{{ url_for('khushi') }}">Khushi</a>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('stress') }}">Stress Relief</a></li>
+                </div><li class="nav-item"><a class="nav-link" href="{{ url_for('stress') }}">Stress Relief</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('study') }}">Study Resources</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('volunteer') }}">Volunteer!</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('trivia') }}">Trivia</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('search') }}">Search</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('dark') }}">Dark Mode</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('forum') }}">Forum</a></li>
-                </div>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('feedback') }}">Feedback</a></li>
+        </ul>
+    </div>
         </ul>
 
     </li>
 </nav>
+</html>
 </body>
 </html>
