Minor error fixed

--- a/templates/volunteer.html
+++ b/templates/volunteer.html
@@ -1,6 +1,6 @@
 {% include "layouts/navbar.html" %}
 <title>Volunteer</title>
-<body style="font-family: Baskerville" </body>
+<body style="font-family: Baskerville"></body>
 
 <head>
     <meta charset="UTF-8">
