--- a/templates/pbl/weather.html
+++ b/templates/pbl/weather.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <form action="/weather/" method="POST" class="form">
+    <form action="/travel/weather/" method="POST" class="form">
     <input type="text" placeholder="Enter keyword term" name='keyword'>
     <button type="submit" class="button">Get Weather</button>
 </form>
