--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -14,21 +14,28 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home</a>
             </li>
+            <a class="nav-link" href="/mainabout">About Us</a>
+            <li class="nav-item dropdown">
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="dropdownMenuButton1" type="button" aria-expanded="false">
                     Projects
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <a class="dropdown-item" href="/projectgreen">Project Green</a>
+                    <a class="dropdown-item" href="/search">Search</a>
                     <a class="dropdown-item" href="/worldclock">World Clock</a>
                     <a class="dropdown-item" href="/translator">Language Translator</a>
-                     <a class="dropdown-item" href="/mainabout">Activities</a>
-                    <a class="dropdown-item" href="/weather">Weather</a>
                     <a class="dropdown-item" href="/crud_api">Crud async</a>
                     <a class="dropdown-item" href="/crud">Crud</a>
-                    <a class="dropdown-item" href="/search">Search</a>
-                    <a class="dropdown-item" href="/ratingtest">Rating</a>
-                    <a class="dropdown-item" href="/games">Games</a>
+
+                </div>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="dropdownMenuButton2" type="button" aria-expanded="false">
+                    Green Net
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                    <a class="dropdown-item" href="/countries">Countries</a>
+                    <a class="dropdown-item" href="/weather">Weather</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -40,10 +47,18 @@
                     <a class="dropdown-item" href="/Tbd-1">Tbd-1</a>
                     <a class="dropdown-item" href="/Tdb-2">Tbd-2</a>
                 </div>
-            </li>
-            <a class="nav-link" href="/mainabout">About Us</a>
             <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="dropdownMenuButton2" type="button" aria-expanded="false">
+                    Activities
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                    <a class="dropdown-item" href="/games">Games</a>
+
+                </div>
+                    </li>
                 <a class="nav-link" href="/feedback">Give Us Feedback!</a>
+                 </li>
+             <a class="nav-link" href="/ratingtest">Rating</a>
             </li>
             <a class="nav-link" href="/faq">FAQ</a>
         </ul>
