--- a/templates/countries.html
+++ b/templates/countries.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 {%  extends "layouts/base.html" %}
-{%  set project = "Project Green" %}
+{%  set project = "Countries" %}
 <head>
     <meta charset="UTF-8">
-    <title>Project Green</title>
+    <title>Countries</title>
 </head>
 
 {% block body %}
