--- a/templates/connor.html
+++ b/templates/connor.html
@@ -53,7 +53,7 @@
                     <p> Hi! My name is Connor Wang and I am a junior at Del Norte High School. I am enrolled in the CSP class. I play for the Del Norte football team, and love spending time with friends!
                      Week 4 Work: Blueprints and Pet Information Overview Page</p>
                     <div>
-                        <a href="ghpages.tanayteamfood.tk">Go  Here!</a>
+                        <a href="http://ghpages.tanayteamfood.tk/">Go  Here!</a>
                         <p> This link will lead you to more information regarding the team and the process to code!</p>
                     </div>
                     <img id="place" class="img-responsive py-3" alt="" width="256" src="/static/assets/connormask.jpg" >
