--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -69,7 +69,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('bconnor.PetQuiz') }}">Pet Quiz</a>
-                    <a class="dropdown-item" href="{{ url_for('bchase.Pquiz2') }}">Pet Quiz 2</a>
+                    <a class="dropdown-item" href="{{ url_for('bchase.Pquiz2') }}">Fun Quiz about Pets and Website</a>
                     <a class="dropdown-item" href="{{ url_for('btanay.hangman') }}">Hangman</a>
                 </div>
             </li>
