--- a/crud3/templates/crud/search.html
+++ b/crud3/templates/crud/search.html
@@ -4,7 +4,7 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 -->
 {% include "layouts/navbar.html" %}
 <title>Search</title>
-<body style="font-family: Baskerville" </body>
+<body style="font-family: Baskerville"> </body>
 
 {% block meta %}
     <title>SQL search</title>
