--- a/crud3/templates/crud/crud.html
+++ b/crud3/templates/crud/crud.html
@@ -7,7 +7,7 @@
 {% block body %}
 
     <title>Find Tutors to Help!</title>
-    <body style="font-family: Baskerville" </body>
+    <body style="font-family: Baskerville"> </body>
 
     <!-- Password verification and error message -->
     <script>
