changes to PBL page

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
         body {
-            background-image: url('/static/background.jpeg');
+            background-image: url('/static/assets/background.jpeg');
         }
 
         h1 {
@@ -25,12 +25,11 @@
     </style>
 </head>
 <br>
-=======
 
 
 </head>
 <br>
-<body style="background-image: url('/static/background.jpeg');" onload="myFunction()">
+<body style="background-image: url('/static/assets/background.jpeg');" onload="myFunction()">
 <h1>Student Resources</h1>
 <br>
 <br>
