--- a/templates/study.html
+++ b/templates/study.html
@@ -26,7 +26,7 @@
                 </a>
             </p>
         </div>
-        <div class="col-sm-6" ">
+        <div class="col-sm-6">
             <p>
                 Here are some study techniques:
                 <br>
