added currency page

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -103,6 +103,7 @@
                 <a class="nav-link" href="{{ url_for('travel.carrental') }}">Cars</a>
                 <a class="nav-link" href="{{ url_for('travel.places') }}">Countries</a>
                 <a class="nav-link" href="{{ url_for('travel.planner') }}">Travel Planner</a>
+                <a class="nav-link" href="{{ url_for('travel.currency') }}">Currency Converter</a>
             </div>
         </li>
     </div>
@@ -143,8 +144,8 @@
     </div>
     <div class="container">
         <div class="row">
-            <form action="/navbarsearch" id="navbarsearch" method="POST">
-                <input name="term" id="term" required="required" />
+            <form action="/navbarsearch" id="navbarsearch" method="POST" >
+                <input name="term" id="term" required="required" placeholder="Search Website"/>
                 <input type="submit" value="Search" />
             </form>
         </div>
