--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -95,6 +95,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <a class="dropdown-item" href="{{ url_for('anikaCraft') }}">Stress Relief Crafts</a>
                     <a class="dropdown-item" href="{{ url_for('nehaAPI') }}">Mental Health</a>
+                    <a class="dropdown-item" href="{{ url_for('eduvidDina') }}">Educational Videos</a>
                 </div>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('stress') }}">Stress Relief</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('study') }}">Study Resources</a></li>
