--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -96,6 +96,12 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="dropdown-item" href="{{ url_for('anikaCraft') }}">Stress Relief Crafts</a>
                     <a class="dropdown-item" href="{{ url_for('nehaAPI') }}">Mental Health</a>
                     <a class="dropdown-item" href="{{ url_for('eduvidDina') }}">Educational Videos</a>
+                    <a class="dropdown-item" href="{{ url_for('gigiTitle') }}">Title Animations</a>
+                    <a class="dropdown-item" href="{{ url_for('gigiChat') }}">Chat</a>
+                    <a class="dropdown-item" href="{{ url_for('gigiSnake') }}">Game</a>
+
+
+
                 </div>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('stress') }}">Stress Relief</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('study') }}">Study Resources</a></li>
