--- a/templates/google.html
+++ b/templates/google.html
@@ -6,7 +6,7 @@
     <title>Custom Search-Bar</title>
     <style>
         body {
-            background-image: linear-gradient(to left, lightblue, navy);
+            background-image: linear-gradient(to left, lightblue, cornflowerblue);
             color: deepskyblue;
         }
     </style>
@@ -17,7 +17,7 @@
 <h1 style="text-align: center;">Team Food</h1>
 <script async src="https://cse.google.com/cse.js?cx=1d39fa29dec8a880e"></script>
 <div class="gcse-search"></div>
-<img src="/static/assets/dogsarch.png" style="float:left;width:400px;height:400px;">
+<img src="/static/assets/dogsarch.png" style="float:left;width:400px;height:275px;">
 </body>
 </html>
 {% endblock %}
