--- a/templates/api/unUsed/home.html
+++ b/templates/api/unUsed/home.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/static/assets/study hall.png" class="d-block w-100">
+                <img src="/static/assets/study%20hall.png" class="d-block w-100">
                 <div class="carousel-caption">
                     <h5>Study Hall</h5>
                     <p>Resources to Study Better</p>
