--- a/templates/keyFeatures/dark.html
+++ b/templates/keyFeatures/dark.html
@@ -6,7 +6,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="static/scss/main.css">
+    <link rel="stylesheet" href="../../static/scss/main.css">
 </head>
 <body onload="myFunction()">
 <div class="container animate-bottom">
