--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -8,7 +8,22 @@
 {% endblock %}
 {% block body %}
     <body>
+    <div id="google_translate_element"></div>
 
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement(
+                {pageLanguage: 'en'},
+                'google_translate_element'
+            );
+        }
+    </script>
+
+    <script type="text/javascript" src=
+            "https://translate.google.com/translate_a/element.js?
+        cb=googleTranslateElementInit">
+    </script>
+    <button onclick="googleTranslateElementInit();">Translate this page to a language of your choosing!</button>
     <div class="jumbotron">
         <h1>Dog Adoption Information</h1>
         <p>Reading this page will allow you to learn more about how to research on adopting a rescue dog and the benefits behind doing so </p>
