--- a/templates/testquiz.html
+++ b/templates/testquiz.html
@@ -1,128 +1,43 @@
-<html>
-{% extends "layouts/base.html" %}
-{% block head %}
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Quiz</title>
-    <script>
-        class Question:
-        def __init__(self, prompt, answer):
-        self.prompt = prompt
-        self.answer = answer
+<!DOCTYPE html>
+<html lang="en-US">
 
-        question_prompts = [
-            "What color are apples?\n(a) Red/Green\n(b)Orange",
-            "What color are bananas?\n(a) Red/Green\n(b)Yellow",
-        ]
-
-        questions = [
-            Question(question_prompts[0], "a"),
-            Question(question_prompts[1], "b"),
-        ]
-
-        def run_quiz(questions):
-        score = 0
-        for question in questions:
-        answer = input(question.prompt)
-        if answer == question.answer:
-        score += 1
-        print("you got", score, "out of", len(questions))
-
-        run_quiz(questions)
-
-    </script>
-    <style>
-        /** code by webdevtrick (https://webdevtrick.com) **/
-        body {
-            background-color: #413D3D;
-        }
-
-        .grid {
-            width: 600px;
-            height: 500px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 10px 50px 50px 50px;
-            border: 2px solid #cbcbcb;
-
-        }
-
-        .grid h1 {
-            font-family: "sans-serif";
-            background-color: #01BBFF;
-            font-size: 60px;
-            text-align: center;
-            color: #ffffff;
-            padding: 2px 0px;
-
-        }
-
-        #score {
-            color: #01BBFF;
-            text-align: center;
-            font-size: 30px;
-        }
-
-        .grid #question {
-            font-family: "monospace";
-            font-size: 30px;
-            color: #01BBFF;
-        }
-
-        .buttons {
-            margin-top: 30px;
-        }
-
-        #btn0, #btn1, #btn2, #btn3 {
-            background-color: #01BBFF;
-            width: 250px;
-            font-size: 20px;
-            color: #fff;
-            border: 1px solid #1D3C6A;
-            margin: 10px 40px 10px 0px;
-            padding: 10px 10px;
-        }
-
-        #btn0:hover, #btn1:hover, #btn2:hover, #btn3:hover {
-            cursor: pointer;
-            background-color: #01BBFF;
-        }
-
-        #btn0:focus, #btn1:focus, #btn2:focus, #btn3:focus {
-            outline: 0;
-        }
-
-        #progress {
-            color: #2b2b2b;
-            font-size: 18px;
-        }
-    </style>
+<head>
+    <title>
+        How To Add Google Translate
+        Button On Your Webpage ?
+    </title>
 </head>
-{% endblock %}
-{% block body %}
+
 <body>
-<div class="grid">
-    <div id="quiz">
-        <h1>Quiz in JavaScript  Webdevtrick.com</h1>
-        <hr style="margin-bottom: 20px">
+<p>Hello everyone!</p>
+<p>Welcome to GeeksforGeeks</p>
 
-        <p id="question"></p>
+<p>
+    Translate this page in
+    your preferred language:
+</p>
+<div id="google_translate_element"></div>
 
-        <div class="buttons">
-            <button id="btn0"><span id="choice0"></span></button>
-            <button id="btn1"><span id="choice1"></span></button>
-            <button id="btn2"><span id="choice2"></span></button>
-            <button id="btn3"><span id="choice3"></span></button>
-        </div>
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+            {pageLanguage: 'en'},
+            'google_translate_element'
+        );
+    }
+</script>
 
-        <hr style="margin-top: 50px">
-        <footer>
-            <p id="progress">Question x of y</p>
-        </footer>
-    </div>
-</div>
+<script type="text/javascript" src=
+        "https://translate.google.com/translate_a/element.js?
+        cb=googleTranslateElementInit">
+</script>
+<p>
+    You can translate the content of this
+    page by selecting a language in the
+    select box.
+
+</p>
+<button onclick="googleTranslateElementInit();">Translate</button>
 </body>
-{% endblock %}
+
 </html>
-
-
