--- a/templates/keyFeatures/stress.html
+++ b/templates/keyFeatures/stress.html
@@ -123,16 +123,16 @@ button:focus {
                     <div class="col-sm-7">
                         <p>
                         <p style="fontsize: medium">
-                            <button class="button button2" onclick="changeVisible(document.getElementById('smile').id)">Calm</button>
+                            <button class="button button2" onclick="changeVisible('smile')">Calm</button>
                             <br>
                             <img id="smile" style="display:none" src="/static/assets/smileface.jpg" width=70%">
                         <p style="fontsize: medium">
                             <br>
-                            <button class="button button3" onclick="changeVisible(document.getElementById('sad').id)" >Sad</button>
+                            <button class="button button3" onclick="changeVisible('sad')" >Sad</button>
                             <img id="sad" style="display:none" src="/static/assets/Sad_Face_Emoji_large.png" width=70%">
                         <p style="fontsize: medium">
                             <br>
-                            <button onclick="changeVisible(document.getElementById('smile2').id)">Happy</button>
+                            <button onclick="changeVisible('smile2')">Happy</button>
                             <img id="smile2" style="display:none" src="/static/assets/smileface.jpg" width=70%">
                         </p>
                     </div>
