--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -36,6 +36,7 @@
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                     <a class="dropdown-item" href="/countries">Countries</a>
                     <a class="dropdown-item" href="/weather">Weather</a>
+                    <a class="dropdown-item" href="/environmental">Environmental News</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -53,6 +54,8 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                     <a class="dropdown-item" href="/games">Games</a>
+                    <a class="dropdown-item" href="/quiz">Quizzes</a>
+                    <a class="dropdown-item" href="/Tbd-1">Tbd-1</a>
 
                 </div>
                     </li>
