--- a/templates/crossTeam/tinahtmlFolder/eduvidDina.html
+++ b/templates/crossTeam/tinahtmlFolder/eduvidDina.html
@@ -235,28 +235,29 @@
             <div class="content">
                 <h2 class="title">Loved Ones</h2>
                 <p class="copy">Someones we forget the people right beside us that want to help</p>
-                <a href="https://youtu.be/ENl5h_VFRQc"><button class="btn btn-1 hover-filled-slide-up"><span>Click Me</span></a> </button>
+                <a href="https://youtu.be/ENl5h_VFRQc"><button class="btn btn-1 hover-filled-slide-up"><span>Click Me</span></button></a>
+                <a href="https://www.verywellmind.com/news-how-to-rekindle-friendships-after-covid-19-5179635"><span>Read Here</span></a>
             </div>
         </div>
         <div class="card">
             <div class="content">
                 <h2 class="title">Organization</h2>
                 <p class="copy">Plan your next study session with these helpful tips</p>
-                <a href="https://youtu.be/QZUQvIf301Y"><button class="btn btn-1 hover-filled-slide-up"><span>Click Me</span></a> </button>
+                <a href="https://youtu.be/QZUQvIf301Y"><button class="btn btn-1 hover-filled-slide-up"><span>Click Me</span></button></a>
             </div>
         </div>
         <div class="card">
             <div class="content">
                 <h2 class="title">Time Off</h2>
                 <p class="copy">Cool your head with some other actives. Stay balanced.</p>
-                <a href="https://youtu.be/EVqMNGb9Zi4"><button class="btn btn-1 hover-filled-slide-up"><span>Click Me</span></a> </button>
+                <a href="https://youtu.be/EVqMNGb9Zi4"><button class="btn btn-1 hover-filled-slide-up"><span>Click Me</span></button></a>
             </div>
         </div>
         <div class="card">
             <div class="content">
                 <h2 class="title">Be Vocal</h2>
                 <p class="copy">Make tangible goals for yourself and achieve them.</p>
-                <a href="https://youtu.be/OXA6gfzFA24"><button class="btn btn-1 hover-filled-slide-up"><span>hover me</span></a> </button>
+                <a href="https://youtu.be/OXA6gfzFA24"><button class="btn btn-1 hover-filled-slide-up"><span>hover me</span></button></a>
             </div>
         </div>
     </main>
