--- a/templates/newapi.html
+++ b/templates/newapi.html
@@ -33,12 +33,15 @@
                 <tr>
                     <div class="col-12" style="text-align: left; ">
                         {% for info in data %}
+                            </div>
                             <tr>
                                 <td> {{info.dt}} </td>
                                 <td> {{info.temp}} </td>
                                 <td> {{info.pressure}} </td>
                                 <td> {{info.wind_speed}} </td>
                             </tr>
+                            </tbody>
+                            </table>
                     </div>
                 </tr>
                 </tbody>
