--- a/templates/crossTeam/anikaCraft.html
+++ b/templates/crossTeam/anikaCraft.html
@@ -91,8 +91,7 @@
                 <span class="visually-hidden">Next</span>
 
             </button>
-
-
-</body>
+        </body>
+    </html>
 {% endblock %}
 </html>
