--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -112,6 +112,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <li class="nav-item"><a class="nav-link" href="{{ url_for('crud') }}">CRUD</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('dark') }}">Dark Mode</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('forum') }}">Forum</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('journal') }}">Journal</a></li>
         </ul>
     </div>
         </ul>
