--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -45,7 +45,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                     <a class="dropdown-item" href="/population">Population</a>
-                    <a class="dropdown-item" href="/Tbd-1">Tbd-1</a>
+                    <a class="dropdown-item" href="/currency">Currency Conversion</a>
                     <a class="dropdown-item" href="/Tdb-2">Tbd-2</a>
                 </div>
             <li class="nav-item dropdown">
