added travel checklist html page

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -104,6 +104,7 @@
                 <a class="nav-link" href="{{ url_for('travel.places') }}">Countries</a>
                 <a class="nav-link" href="{{ url_for('travel.planner') }}">Travel Planner</a>
                 <a class="nav-link" href="{{ url_for('travel.currency') }}">Currency Converter</a>
+                <a class="nav-link" href="{{ url_for('travelchecklist') }}">Travel Checklist</a>
             </div>
         </li>
     </div>
