added home button to travel checklist page

--- a/templates/pbl/travelchecklist.html
+++ b/templates/pbl/travelchecklist.html
@@ -1,12 +1,11 @@
-<form action="http://127.0.0.1:8081/">
-    <input type="submit" value="Go Home" />
-</form>
+<!-- Creds to https://www.youtube.com/watch?v=Z43SXaDPo2s-->
 {% block body %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Travel Checklist</title>
+    <button onclick="window.location.href='http://127.0.0.1:8081/';">HOME</button>-->
 </head>
 
 <body>
