added home button to travel checklist page

--- a/templates/pbl/travelchecklist.html
+++ b/templates/pbl/travelchecklist.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Travel Checklist</title>
-    <button onclick="window.location.href='http://127.0.0.1:8081/';">HOME</button>-->
+    <button onclick="window.location.href='http://127.0.0.1:8081/';">HOME</button>
 </head>
 
 <body>
