--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -55,7 +55,7 @@
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                     <a class="dropdown-item" href="/games">Games</a>
                     <a class="dropdown-item" href="/quiz">Quizzes</a>
-                    <a class="dropdown-item" href="/Tbd-1">Tbd-1</a>
+                    <a class="dropdown-item" href="/world_instruments">World Instruments!</a>
 
                 </div>
                     </li>
@@ -67,6 +67,8 @@
         </ul>
 
     </div>
+
+
     <div class="float-right m-2">
         <div class="form-group">
             <input type="text" class="form-control" id="term" placeholder="enter search term">
@@ -82,6 +84,10 @@
             <div class="form-check form-switch">
                 <input type="checkbox" onclick="darkFunction()" class="form-check-input" id="darkSwitch">
                 <label class="custom-control-label" for="darkSwitch" style="color: black;">Dark Mode</label>
+            </div>
+            <div class="float-right m-2">
+                <div id="google_translate_element"></div>
+
             </div>
         </div>
         {% block navbar_script %}
@@ -167,4 +173,17 @@
                 })
             })
     }
+</script>
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+            {pageLanguage: 'en'},
+            'google_translate_element'
+        );
+    }
+</script>
+
+<script type="text/javascript" src=
+        "https://translate.google.com/translate_a/element.js?
+        cb=googleTranslateElementInit">
 </script>
