--- a/templates/crossTeam/nehaAPI.html
+++ b/templates/crossTeam/nehaAPI.html
@@ -1,4 +1,5 @@
-{% extends "layouts/navbar.html" %}
+<!DOCTYPE html>
+{% include "layouts/navbar.html" %}
 {%block head%}
 
 {%endblock%}
@@ -14,5 +15,7 @@
     <p><strong>Quote: </strong>{{ Y.quote }}</p>
     <p><strong>Author: </strong>{{ Y.author }}</p>
     <p><strong>Category: </strong>{{ Y.category }}</p>
+
+
 
 {%endblock%}
