--- a/templates/infopage.html
+++ b/templates/infopage.html
@@ -26,7 +26,7 @@
         .row {
             padding: 25px;
             text-align: left;
-            background-color:navy;
+            background-color:lightsteelblue;
             color:whitesmoke;
         }
 
@@ -48,14 +48,14 @@
             display: inline-block;
             padding: 8px;
             color: white;
-            background-color:forestgreen;
+            background-color:slategrey;
             text-align: center;
             cursor: pointer;
             width: 100%;
         }
 
         .button:hover {
-            background-color:lightgreen;
+            background-color:lightslategray;
         }
 
         @media screen and (max-width: 650px) {
